<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.metricshub</groupId>
		<artifactId>oss-parent</artifactId>
		<version>4</version>
	</parent>

	<groupId>io.jawk</groupId>
	<artifactId>jawk</artifactId>
	<version>6.2.00-SNAPSHOT</version>

	<name>Jawk</name>
	<description>Java AWK interpreter, allowing Java to call and execute AWK scripts in the JVM.</description>
	<url>https://jawk.io</url>
	<inceptionYear>2006</inceptionYear>

	<organization>
		<name>Jawk</name>
		<url>https://jawk.io</url>
	</organization>

	<licenses>
		<license>
			<name>LGPL-3.0-only</name>
			<url>https://spdx.org/licenses/LGPL-3.0-only.html</url>
			<distribution>repo</distribution>
		</license>
		<license>
			<name>GPL-3.0-only</name>
			<url>https://spdx.org/licenses/GPL-3.0-only.html</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/jawkio/jawk/issues/</url>
	</issueManagement>

	<scm>
		<connection>scm:git:https://github.com/jawkio/jawk.git</connection>
		<url>https://github.com/jawkio/jawk</url>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<name>Danny Daglas (@ddaglas)</name>
			<roles>
				<role>Project founder</role>
			</roles>
		</developer>
		<developer>
			<name>Robin Vobruba (@hoijui)</name>
			<email>hoijui.quaero@gmail.com</email>
			<roles>
				<role>Maintainer</role>
			</roles>
		</developer>
		<developer>
			<name>Bertrand Martin (@bertysentry)</name>
			<email>bertrand@metricshub.com</email>
			<roles>
				<role>Maintainer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<!-- Java 8 -->
		<maven.compiler.release>8</maven.compiler.release>

		<!-- Reproducible Build -->
		<!-- See https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
		<project.build.outputTimestamp>2026-04-19T19:41:32Z</project.build.outputTimestamp>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.metricshub</groupId>
			<artifactId>printf4j</artifactId>
			<version>0.9.08</version>
		</dependency>

		<dependency>
			<groupId>com.github.stefanbirkner</groupId>
			<artifactId>system-rules</artifactId>
			<version>1.19.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.spotbugs</groupId>
			<artifactId>spotbugs-annotations</artifactId>
			<version>4.9.8</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>add-compatibility-test-source</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${project.basedir}/src/it/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!--formatter -->
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.29.0</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>validate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<directories>
						<directory>${project.build.sourceDirectory}</directory>
						<directory>${project.build.testSourceDirectory}</directory>
						<directory>${project.basedir}/src/it/java</directory>
					</directories>
					<includes>
						<include>**/*.java</include>
					</includes>
					<configFile>metricshub-eclipse-formatter.xml</configFile>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.7.1</version>
				<configuration>
					<licenseName>lgpl_v3</licenseName>
					<includes>
						<include>main/java/**/*.java</include>
						<include>test/java/**/*.java</include>
						<include>it/java/**/*.java</include>
					</includes>
				</configuration>
			</plugin>

			<!-- javadoc -->
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<source>${maven.compiler.release}</source>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- surefire -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<workingDirectory>${project.build.directory}/surefire-workingdir</workingDirectory>
				</configuration>
			</plugin>

			<!-- failsafe for compatibility tests -->
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*IT.java</include>
					</includes>
					<testFailureIgnore>true</testFailureIgnore>
					<workingDirectory>${project.build.directory}/failsafe-workingdir</workingDirectory>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- jar -->
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<packageName>${project.groupId}</packageName>
                                                        <mainClass>io.jawk.Cli</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<!-- shade -->
			<plugin>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<id>standalone</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>standalone</shadedClassifierName>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<filters>
								<filter>
									<!--
																		Exclude files that sign a jar
																		(one or multiple of the dependencies).
																		One may not repack a signed jar without
																		this, or you will get a
																		SecurityException at program start.
									-->
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer" />
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- site -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<id>compile-for-site</id>
						<phase>pre-site</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>generate-compatibility-summary</id>
						<phase>pre-site</phase>
						<goals>
							<goal>java</goal>
						</goals>
						<configuration>
							<mainClass>io.jawk.site.CompatibilitySummaryGenerator</mainClass>
							<arguments>
								<argument>${project.build.directory}/failsafe-reports</argument>
								<argument>${project.build.directory}/generated-site/compatibility-summary.xml</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>4.0.0-M16</version>
				<dependencies>
					<dependency>
						<groupId>org.sentrysoftware.maven</groupId>
						<artifactId>maven-skin-tools</artifactId>
						<version>1.7.00</version>
					</dependency>
				</dependencies>
			</plugin>

			<!-- checkstyle -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<failOnViolation>true</failOnViolation>
					<configLocation>checkstyle.xml</configLocation>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- pmd -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.28.0</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
							<!--goal>cpd-check</goal-->
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- spotbugs -->
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.9.8.3</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<reporting>
		<plugins>

			<!-- Default project-info-reports -->
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
			</plugin>

			<!-- surefire report -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.5.5</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changelog-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

</project>
